@@ -103,7 +103,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                  <configuration>
-                   <skip.surefire.tests>${skipTests}</skip.surefire.tests>
+                    <argLine>
+                 @{argLine}  --add-opens infectiontracer.ui/infectiontracer.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    </argLine>
                     </configuration>
             </plugin>
 
